tests/NormalTests/paczka1/small_fuzzy/48264933.err
Error in line 2: APGyO48v S885 83,4
Error in line 1: tnv A615 61,3
Error in line 11: arC A615 99,7
